# ProgrammingWindows5thEdWithCMake

./: .gitignore  CMakeLists.txt  README.md
Chapter01/: CMakeLists.txt
Chapter02/: CMakeLists.txt
Chapter03/: CMakeLists.txt
Chapter03/HelloWin/: Hellowin.c
Chapter04/: CMakeLists.txt
Chapter04/SysMets1/: SysMets.h
Chapter05/: CMakeLists.txt
Chapter06/: CMakeLists.txt
Chapter07/: CMakeLists.txt
Chapter07/Checker3/: Checker3.c
Chapter07/Checker4/: Checker4.c
Chapter08/: CMakeLists.txt
Chapter09/: CMakeLists.txt
Chapter09/Colors1/: Colors1.c
Chapter09/Environ/: Environ.c
Chapter09/head/: head.c
Chapter10/: CMakeLists.txt
Chapter10/MenuDemo/: MenuDemo.c
Chapter10/NoPopups/: NoPopups.c
Chapter10/PoePoem/: PoePoem.c
Chapter10/PoorMenu/: PoorMenu.c
Chapter10/PopMenu/: PopMenu.c
Chapter11/: CMakeLists.txt
Chapter11/Colors2/: Colors2.c
Chapter12/: CMakeLists.txt
Chapter13/: CMakeLists.txt
Chapter13/FormFeed/: FormFeed.c
Chapter14/: CMakeLists.txt
Chapter14/Bricks1/: RCa02492
Chapter15/: CMakeLists.txt
Chapter16/: CMakeLists.txt
Chapter17/: CMakeLists.txt
Chapter18/: CMakeLists.txt
Chapter19/: CMakeLists.txt
Chapter19/MDIDemo/: MDIDemo.c
Chapter20/: CMakeLists.txt
Chapter20/Multi1/: Multi1.c
Chapter20/Multi2/: Multi2.c
Chapter21/: CMakeLists.txt
Chapter21/ShowBit/: BitLib.c
Chapter22/: CMakeLists.txt
Chapter22/WakeUp/: WakeUp.c
Chapter23/: CMakeLists.txt
